src/test/ui/span/regionck-unboxed-closure-lifetimes.nll.stderr
error: compilation successful
  --> $DIR/regionck-unboxed-closure-lifetimes.rs:13:1
   |
LL | / fn main() { #![rustc_error] // rust-lang/rust#49855
LL | |     let mut f;
LL | |     {
LL | |         let c = 1;
...  |
LL | |     }
LL | | }
   | |_^

error: aborting due to previous error

